# macrograd

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  macrograd.sln
macrograd/: CMakeLists.txt  macrograd.vcxproj  macrograd.vcxproj.filters  nn.cpp
macrograd/include/: cuda_backend.h  macrograd.h  macrograd_error.h  macrograd_nn.h
macrograd/kernels/: cuda_backend.cu
macrograd/source/: array.cpp  nn.cpp  tensor.cpp  tensor_ops.cpp
mini_shakespeare/: 1.6238.mg  1.6325val.mg  1.63val.mg  CMakeLists.txt  mini_shakespeare.vcxproj  mini_shakespeare.vcxproj.filters  my_shakespeare.mg  patata.mg
mini_shakespeare/include/: MNIST.h  mini_shakespeare.h  tokenizer.h  training.h  transformer.h
mini_shakespeare/source/: MNIST.cpp  main.cpp
mini_shakespeare/weights/: my_shakespeare.mg  my_shakespeare1.5023.mg  training_log.txt
